# bazel-llvm-project

./: .bazelrc  .gitignore  EXTENSIONS.bzl  LIBS.bzl  MODULE.bazel  README.adoc
llvm/bindings/ocaml/all_backends/: BUILD.bazel
llvm/bindings/ocaml/analysis/: BUILD.bazel
llvm/bindings/ocaml/backends/: BUILD.bazel
llvm/bindings/ocaml/bitreader/: BUILD.bazel
llvm/bindings/ocaml/bitwriter/: BUILD.bazel
llvm/bindings/ocaml/debuginfo/: BUILD.bazel
llvm/bindings/ocaml/executionengine/: BUILD.bazel
llvm/bindings/ocaml/irreader/: BUILD.bazel
llvm/bindings/ocaml/linker/: BUILD.bazel
llvm/bindings/ocaml/llvm/: BUILD.bazel  llvm.ml  llvm.mli  llvm_ocaml.c
llvm/bindings/ocaml/transforms/ipo/: BUILD.bazel
llvm/bindings/ocaml/transforms/passmgr_builder/: BUILD.bazel
llvm/bindings/ocaml/transforms/scalar_opts/: BUILD.bazel
llvm/bindings/ocaml/transforms/utils/: BUILD.bazel
llvm/bindings/ocaml/transforms/vectorize/: BUILD.bazel
llvm/include/llvm/Config/: llvm-config.h
llvm/test/Bindings/OCaml/: BUILD.bazel  core.ml
llvm/test/Bindings/OCaml/Utils/: BUILD.bazel
utils/bazel/: BUILD.lib_pkg  EXTENSIONS.bzl  RULES.bzl  TOOLS.bzl
utils/bazel/bindings/ocaml/src/all_backends/: BUILD.bazel
utils/bazel/bindings/ocaml/src/analysis/: BUILD.bazel
utils/bazel/bindings/ocaml/src/backends/: BUILD.bazel
utils/bazel/bindings/ocaml/src/bitreader/: BUILD.bazel
utils/bazel/bindings/ocaml/src/bitwriter/: BUILD.bazel
utils/bazel/bindings/ocaml/src/debuginfo/: BUILD.bazel
utils/bazel/bindings/ocaml/src/executionengine/: BUILD.bazel
utils/bazel/bindings/ocaml/src/irreader/: BUILD.bazel
utils/bazel/bindings/ocaml/src/linker/: BUILD.bazel
utils/bazel/bindings/ocaml/src/llvm/: BUILD.bazel
utils/bazel/bindings/ocaml/src/transforms/ipo/: BUILD.bazel
utils/bazel/bindings/ocaml/src/transforms/passmgr_builder/: BUILD.bazel
utils/bazel/bindings/ocaml/src/transforms/scalar_opts/: BUILD.bazel
utils/bazel/bindings/ocaml/src/transforms/utils/: BUILD.bazel
utils/bazel/bindings/ocaml/src/transforms/vectorize/: BUILD.bazel
utils/bazel/bindings/ocaml/test/: BUILD.bazel
