LLVM_VERSION = "16.0.6"
LLVM_BUILD_DIR = ".build." + LLVM_VERSION

module(
    name = "llvm",
    version = LLVM_VERSION,
    compatibility_level = 15,
    bazel_compatibility = [">=6.0.0"]
)

llvm_sdk = use_extension(
    # "@llvm//:EXTENSIONS.bzl",
    "@llvm//utils/bazel:EXTENSIONS.bzl",
    "llvm_sdk"
)
# llvm_sdk.config(
#     version = LLVM_VERSION,
#     llvm_build_dir = LLVM_BUILD_DIR
# )
llvm_sdk.c(
    version = LLVM_VERSION,
    llvm_build_dir = LLVM_BUILD_DIR,
    targets = ["ALL"]
)
llvm_sdk.ocaml(
    version = LLVM_VERSION,
    llvm_build_dir = LLVM_BUILD_DIR,
    targets = ["ALL"]
)
use_repo(llvm_sdk,
         "llvm_tools",
         "llvm_c_sdk",
         ocaml_llvm = "llvm_ocaml_sdk")

bazel_dep(name = "platforms",    version = "0.0.7")
bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "cc_config",    version = "1.0.0")
bazel_dep(name = "rules_ocaml",  version = "1.0.0")
bazel_dep(name = "obazl",           version = "1.0.0",
          dev_dependency = True)

bazel_dep(name = "ocaml", version = "0.0.0")
register_toolchains("@ocaml//toolchain/selectors/local:all")
register_toolchains("@ocaml//toolchain/profiles:all")

bazel_dep(name = "ctypes", version = "0.0.0")
bazel_dep(name = "ctypes-foreign", version = "0.0.0")
bazel_dep(name = "unix",   version = "0.0.0")

################################################################
# bazel_dep(name = "toolchains_llvm", version = "0.10.3")
# local_path_override(
#     module_name = "toolchains_llvm",
#     path = "/Users/gar/obazl/llvm-bazel-toolchain"
# )

# # To directly use a commit from GitHub, replace commit with the commit you want.
# # Otherwise, omit this block.
# # git_override(
# #   module_name = "toolchains_llvm",
# #   commit = "42e0b400fe316797657ccc5d7d2f9bb6f13071d8",
# #   remote = "https://github.com/grailbio/bazel-toolchain",
# # )

# # Configure and register the toolchain.
# llvm = use_extension("(@llvm_sdk)//toolchain/extensions:llvm.bzl", "llvm")
# llvm.toolchain(
#     llvm_version = "15.0.0",
#     # llvm_version = "16.0.0",
#     # llvm_version = "16.0.5" #latest w/darwin binaries
#     # targets = ["ALL"]
# )

# # use_repo(llvm, "llvm_toolchain")
# # register_toolchains("@llvm_toolchain//:all")

# use_repo(llvm, "llvm_toolchain_llvm")
# register_toolchains("@llvm_toolchain_llvm//:all")
