load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Irreader_cmi",
    src = "llvm_irreader.mli",
    deps   = ["//llvm/bindings/ocaml/llvm:Llvm"]
)

ocaml_module(
    name = "Irreader",
    struct = "llvm_irreader.ml",
    sig    = ":Irreader_cmi",
    deps   = [
        "//llvm/bindings/ocaml/llvm:Llvm",
        "//llvm/bindings/ocaml/target:Target",
        ":irreader_c"
    ],
)

cc_library(
    name = "irreader_c",
    srcs = ["irreader_ocaml.c"],
    copts = [
        "-I$(@ocaml)/lib/c",
        "-I$(@llvm_sdk)/sdk/c/include",
        "-I$(@)/llvm/bindings/ocaml/llvm"
    ],
    deps = [
        "@ocaml//lib/c:sdk",
        "@llvm_sdk//sdk/c/include:llvm-c",
        "@llvm_sdk//sdk/c/lib:libLLVMAsmParser",
        "@llvm_sdk//sdk/c/lib:libLLVMIRReader",
        "@llvm_sdk//sdk/c/lib:target-libs",
        "//llvm/bindings/ocaml/llvm:Llvm"
    ],
    toolchains = ["//:repo_paths"]
)
