load("@rules_ocaml//build:rules.bzl",
     "ocaml_module", "ocaml_signature")
load(":RULES.bzl", "llvm_gensrc")

package(default_visibility=["//visibility:public"])

load("@llvm_c_sdk//:CONFIG.bzl",
     "LLVM_DEFINES", "LLVM_LINKOPTS", "COPTS")

ocaml_module(
    name   = "Backend",
    struct = ":llvm_backend.ml",
    sig    = ":Backend_cmi",
    deps   = [
        # "//src/llvm:Llvm",
        ":backend_c",
    ],
)

llvm_gensrc(
    name = "bkend",
    template = "llvm_backend.ml.in",
    out      = "llvm_backend.ml",
    toolchains = ["@llvm_c_sdk//makevars"]
)

ocaml_signature(
    name   = "Backend_cmi",
    src    = ":llvm_backend.mli",
)

llvm_gensrc(
    name = "bkend_cmi",
    template = "llvm_backend.mli.in",
    out      = "llvm_backend.mli",
    toolchains = ["@llvm_c_sdk//makevars"]
)

###########
cc_library(
    name = "backend_c",
    srcs = ["backend_ocaml.c"],
    copts = COPTS + [
        "-I$(@llvm_c_sdk)/sdk/c/include",
        "-I$(@ocaml)/lib/c",
    ],
    linkopts = LLVM_LINKOPTS,
    local_defines  =  LLVM_DEFINES + [
        "TARGET=$(LLVM_TARGET_ARCH)"
    ],
    deps = [
        # FIXME: do we need target-specific libs here?
        "@llvm_c_sdk//sdk/c/include:llvm-c",
        "@ocaml//lib/c:sdk"
    ],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths",
                  "@llvm_c_sdk//makevars"]
)
