load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

load("@llvm_c_sdk//:CONFIG.bzl",
     "LLVM_DEFINES", "LLVM_LINKOPTS", "COPTS")

ocaml_signature(
    name = "Bitreader_cmi",
    src = "Llvm_bitreader.mli",
    opts = ["-w", "-unexpected-docstring"], # 50
    deps = ["//src/llvm:Llvm"]
)

ocaml_module(
    name = "Bitreader",
    struct = "llvm_bitreader.ml",
    sig    = "Bitreader_cmi",
    opts = ["-g"],
    deps   = ["//src/llvm:Llvm",
              ":bitreader_c"],
)

cc_library(
    name = "bitreader_c",
    srcs = [
        "bitreader_ocaml.c",
    ],
    copts = COPTS + [
        "-I$(@llvm_c_sdk)/sdk/c/include",
        "-I$(@ocaml)/lib/c",
        "-I$(@)/src/llvm",
    ],
    linkopts = LLVM_LINKOPTS,
    local_defines  = LLVM_DEFINES,
    deps = [
        "@llvm_c_sdk//sdk/c/include:llvm-c",
        "@llvm_c_sdk//sdk/c/lib:bitreader-libs",
        "@ocaml//lib/c:sdk",
        "//src/llvm:Llvm"
    ],
    toolchains = ["//:repo_paths"]
)
