load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

load("@llvm_c_sdk//:CONFIG.bzl",
     "LLVM_DEFINES", "LLVM_LINKOPTS", "COPTS")

ocaml_signature(
    name = "Debuginfo_cmi",
    src = "llvm_debuginfo.mli",
    deps   = ["//src/llvm:Llvm"]
)

ocaml_module(
    name = "Debuginfo",
    struct = "llvm_debuginfo.ml",
    sig    = ":Debuginfo_cmi",
    opts   = ["-w", "-labels-omitted"], # 6
    deps   = [":debuginfo_c"],
)

cc_library(
    name = "debuginfo_c",
    srcs = ["debuginfo_ocaml.c"],
    copts = COPTS + [
        "-I$(@llvm_c_sdk)/sdk/c/include",
        "-I$(@ocaml)/lib/c",
        "-I$(@)/src/llvm"
    ],
    linkopts = LLVM_LINKOPTS,
    local_defines  = LLVM_DEFINES,
    deps = [
        "@llvm_c_sdk//sdk/c/include:llvm-c",
        "@llvm_c_sdk//sdk/c/lib:all-libs",
        "@ocaml//lib/c:sdk",
        "//src/llvm:Llvm"
    ],
    toolchains = ["//:repo_paths"]
)
