load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

load("@llvm_c_sdk//:CONFIG.bzl", "LLVM_DEFINES", "LLVM_LINKOPTS",
     "COPTS")

package(default_visibility=["//visibility:public"])

ocaml_signature(
    name = "Irreader_cmi",
    src = "llvm_irreader.mli",
    deps   = ["//src/llvm:Llvm"]
)

ocaml_module(
    name = "Irreader",
    struct = "llvm_irreader.ml",
    sig    = ":Irreader_cmi",
    deps   = [
        "//src/llvm:Llvm",
        "//src/target:Target",
        ":irreader_c"
    ],
)

cc_library(
    name = "irreader_c",
    srcs = ["irreader_ocaml.c"],
    copts = COPTS + [
        "-I$(@ocaml)/lib/c",
        "-I$(@llvm_c_sdk)/sdk/c/include",
        "-I$(@)/src/llvm"
    ],
    linkopts = LLVM_LINKOPTS,
    local_defines  = LLVM_DEFINES,
    deps = [
        "@ocaml//lib/c:sdk",
        "@llvm_c_sdk//sdk/c/include:llvm-c",
        "@llvm_c_sdk//sdk/c/lib:libLLVMAsmParser",
        "@llvm_c_sdk//sdk/c/lib:libLLVMIRReader",
        "@llvm_c_sdk//sdk/c/lib:target-libs",
        "//src/llvm:Llvm"
    ],
    toolchains = ["//:repo_paths"]
)
