load("@rules_ocaml//build:rules.bzl",
     "ocaml_module",
     "ocaml_signature"
)

package(default_visibility=["//visibility:public"])

load("@llvm_c_sdk//:CONFIG.bzl",
     "LLVM_DEFINES", "LLVM_LINKOPTS", "COPTS")

ocaml_signature(
    name = "Ipo_cmi",
    src = "llvm_ipo.mli",
    deps   = [
        "//src/transforms/passmgr_builder:Passmgr_builder",
    ]
)

ocaml_module(
    name = "Ipo",
    struct = "llvm_ipo.ml",
    sig    = "Ipo_cmi",
    deps   = [
        "//src/llvm:Llvm",
        "//src/target:Target"
    ],
    cc_deps = [":ipo_c"]
)

cc_library(
    name = "ipo_c",
    srcs = ["ipo_ocaml.c"],
    copts = COPTS + [
        "-I$(@ocaml)/lib/c",
        "-I$(@llvm_c_sdk)/sdk/c/include",
        "-I$(@)/src/llvm"
    ],
    linkopts = LLVM_LINKOPTS,
    local_defines  = LLVM_DEFINES,
    deps = [
        "@ocaml//lib/c:sdk",
        "@llvm_c_sdk//sdk/c/include:llvm-c",
        "//src/llvm:Llvm"
    ],
    visibility = ["//visibility:public"],
    toolchains = ["//:repo_paths"]
)
